Update: Notification Tests & HomeViewModelTest